--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 @charset "UTF-8";
 
+* {
+    scroll-behavior: smooth;
+}
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background-color: #fae1dd;
+    transition: all .5s ease;
+}
+.scrolled {
+    background-color: black;
 }
 
 .container {
@@ -57,15 +64,19 @@ body {
     top: 12px;
 }
 
+.bonita {
+    font-family: cursive;
+    font-size: 20px;
+}
 .text {
     position: absolute;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 12px;
+    font-family: cursive;
+    font-size: 10px;
     text-align: center;
     line-height: 12px;
-    top: 19px;
-    left: 15px;
-    right: 15px;
+    top: 12px;
+    left: 20px;
+    right: 20px;
     color: #333;
 }
 
@@ -73,7 +84,7 @@ body {
     background-color: #9D030D;
     display: inline-block;
     height: 30px;
-    margin: 0 10px;
+    margin: 5px 10px;
     position: relative;
     top: 110px;
     left: 105px;
