--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@ body {
     transition: all .5s ease;
 }
 .scrolled {
-    background-color: black;
+    background-color: #003049;
+}
+.scrolled2 {
+    background-color: #333;
 }
 
 .container {
@@ -224,3 +227,16 @@ body {
         opacity: .5;
     }
 }
+
+/* container 2 */
+
+/* .container2 {
+    top: 1200px;
+    position: absolute;
+    color: white;
+    height: 1200px;
+}
+.container2 .msg {
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+} */
